Add approve time record route
